Bug 29304 - celestia segfaults on start in glXWaitX with current mesa from git
Summary: celestia segfaults on start in glXWaitX with current mesa from git
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: GLX (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-29 14:40 UTC by Giacomo Perale
Modified: 2010-07-29 15:51 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Backtrace of the crash (2.19 KB, text/plain)
2010-07-29 14:40 UTC, Giacomo Perale
Details

Description Giacomo Perale 2010-07-29 14:40:21 UTC
Created attachment 37445 [details]
Backtrace of the crash

Celestia 1.6.0 segfaults on start (in DRI1/UMS) with current mesa from git (head cd601513f5ff4f488a6f6527bb033e39ee62ffda). I didn't bisect yet but the problem started last week with the glx rework.

I'm using a Radeon X550 (RV370) with mesa and xf86-video-ati from git, xorg-server 1.8.2 and kernel 2.6.34.1. Full backtrace attached.
Comment 1 Kristian Høgsberg 2010-07-29 15:51:00 UTC
Should be fixed by:

commit e3e25dee2019b2c75acadeaf4358cd9a8d93db0b
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Thu Jul 29 18:48:51 2010 -0400

    glx: Fix copy/paste bug in glXWaitX and glXWaitGL
    
    https://bugs.freedesktop.org/show_bug.cgi?id=29304


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.