glx: Fix copy/paste bug in glXWaitX and glXWaitGL

https://bugs.freedesktop.org/show_bug.cgi?id=29304